[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/GFX/Interface/bannerHanging.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Interface/panel_woodPaperDetail.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=4]
[ext_resource path="res://fonts/HeadlineFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=11]
outline_size = 2
outline_color = Color( 0.137255, 0.317647, 0.866667, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0.243137, 0.627451, 0.160784, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HeadLine" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HeadLine"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.455
margin_top = -22.044
margin_right = 288.545
margin_bottom = 23.956
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.403922, 0.0901961, 0.0392157, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 3
text = "CubeDude Cickabout"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBanner" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 72.0
margin_right = -10.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Player2" type="Label" parent="ScoreBanner"]
anchor_left = 0.223
anchor_top = 0.53
anchor_right = 0.223
anchor_bottom = 0.53
margin_left = -58.352
margin_top = -11.9923
margin_right = 57.648
margin_bottom = 12.0077
custom_fonts/font = SubResource( 11 )
text = "Player 2"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="ScoreBanner/Player2"]
anchor_left = 1.32
anchor_top = 0.5
anchor_right = 1.32
anchor_bottom = 0.5
margin_left = -20.0524
margin_top = -10.594
margin_right = 19.9476
margin_bottom = 13.406
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.211765, 0.286275, 0.631373, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="ScoreBanner"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1.99997
margin_top = 15.0
margin_right = 2.0
margin_bottom = 60.0
rect_scale = Vector2( 4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Label" parent="ScoreBanner"]
anchor_left = 0.74
anchor_top = 0.53
anchor_right = 0.74
anchor_bottom = 0.53
margin_left = -57.7599
margin_top = -11.9923
margin_right = 58.2401
margin_bottom = 12.0077
custom_fonts/font = SubResource( 13 )
text = "Player 1"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="ScoreBanner/Player1"]
anchor_left = 1.307
anchor_top = 0.509
anchor_right = 1.307
anchor_bottom = 0.509
margin_left = -20.0046
margin_top = -12.0072
margin_right = 19.9954
margin_bottom = 11.9928
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.211765, 0.482353, 0.164706, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 250 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -80.0
margin_right = 175.0
margin_bottom = 120.0
rect_min_size = Vector2( 350, 200 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="GameOverLabel" type="Label" parent="GameOver/NinePatchRect/VBoxContainer"]
margin_right = 320.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.403922, 0.0901961, 0.0392157, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 3
text = "GameOver"
align = 1
autowrap = true

[node name="WinnerLabel" type="Label" parent="GameOver/NinePatchRect/VBoxContainer"]
margin_top = 50.0
margin_right = 320.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.345098, 1 )
text = "The Winner"
align = 1

[node name="PlayAgain" type="Button" parent="GameOver/NinePatchRect/VBoxContainer"]
margin_top = 93.0
margin_right = 320.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 15 )
text = "Play Again"

[node name="Quit" type="Button" parent="GameOver/NinePatchRect/VBoxContainer"]
margin_top = 127.0
margin_right = 320.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 10 )
text = "Quit"

[node name="PausePopup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 250 )
theme = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -80.0
margin_right = 175.0
margin_bottom = 120.0
rect_min_size = Vector2( 350, 200 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PausePopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="GameOverLabel" type="Label" parent="PausePopup/NinePatchRect/VBoxContainer"]
margin_right = 320.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.403922, 0.0901961, 0.0392157, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 3
text = "Paused"
align = 1
autowrap = true

[node name="RalocateBallButton" type="Button" parent="PausePopup/NinePatchRect/VBoxContainer"]
margin_top = 50.0
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 15 )
text = "relocate ball"

[node name="SoundButton" type="Button" parent="PausePopup/NinePatchRect/VBoxContainer"]
margin_top = 84.0
margin_right = 320.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 10 )
text = "sound on"

[node name="Resume" type="Button" parent="PausePopup/NinePatchRect/VBoxContainer"]
margin_top = 118.0
margin_right = 320.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 10 )
text = "Resume Game"
[connection signal="pressed" from="GameOver/NinePatchRect/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="GameOver/NinePatchRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="PausePopup/NinePatchRect/VBoxContainer/RalocateBallButton" to="." method="_on_RalocateBallButton_pressed"]
[connection signal="pressed" from="PausePopup/NinePatchRect/VBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="PausePopup/NinePatchRect/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
